Fixed Header height on mobile devices. Now it responds to the actual screen size

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -2,7 +2,8 @@
     background-image: url('/imgs/monitor-bg.jpg');
     background-size: 250%;
 
-    height: 100vh;
+    height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     text-align: center;
     padding: 0 2em;
 
@@ -19,7 +20,8 @@
     top: 0;
     left: 0;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-    height: 100vh;
+    height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 .profile_picture {
