--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .container_navbar {
     background: rgba(255, 255, 255, 0.75);
-    width: 95%;
+    width: 100%;
     height: 3em;
     margin: auto;
     border-radius: 0 0 16px 16px;
